--- a/index.html
+++ b/index.html
@@ -11,20 +11,21 @@
 <body>
     <div class="wrapper">
             <div class="content">
-            <header>The joke of the day is</header>
+            <header>Frase do Dia</header>
               <div class="quote-area">
               <i class="fas fa-quote-left"></i>
-              <p class="quote">Never give up because you never know if the next try is going to be the one that works.</p>
+              <p class="quote">Clique abaixo para gera uma frase.</p>
               <i class="fas fa-quote-right"></i>
             </div>
             <div class="author">
                 <span>__</span>
-                <span class="name">Mary Kay Ash</span>
+                <span class="name">Autor interessante</span>
             </div>
             <div class="buttons">
-                <button>Generage New Joke</button>
+                <button>GERAR FRASE</button>
             </div>
         </div>
     </div>
+    <script src='index.js'></script>
 </body>
 </html>
