--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <header>Frase do Dia</header>
               <div class="quote-area">
               <i class="fas fa-quote-left"></i>
-              <p class="quote">Clique abaixo para gera uma frase.</p>
+              <p class="quote">Clique abaixo para gerar uma frase.</p>
               <i class="fas fa-quote-right"></i>
             </div>
             <div class="author">
